--- a/GooglePlus/GooglePlus.csproj
+++ b/GooglePlus/GooglePlus.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="GooglePlus.cs" />
+    <Compile Include="System.Json.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
